Fix spacing for new nested labels

--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -108,6 +108,8 @@ li {
 label {
   display: flex;
   flex-direction: column;
+  line-height: 27px;
+  margin-top: -5.5px;
 }
 
 .label {
@@ -115,7 +117,6 @@ label {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.42px;
-  line-height: 16px;
   display: flex;
   justify-content: space-between;
 }
